--- a/index.html
+++ b/index.html
@@ -7,4 +7,10 @@
         <script src="app.js"></script>
     </head>
     <body></body>
+    <script>
+        window.onload = function() {
+            var context = new AudioContext();
+            // Setup all nodes
+        };
+    </script>
 </html>
