add bootstrap design

--- a/index.html
+++ b/index.html
@@ -1,12 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>GameJam</title>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.22.0/phaser.js"></script>
-        <script src="app.js"></script>
-    </head>
-    <body></body>
-    <script>
-    </script>
+  <head>
+    <meta charset="UTF-8" />
+    <title>GameJam</title>
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.22.0/phaser.js"></script>
+    <script src="app.js"></script>
+  </head>
+  <body>
+    <nav class="navbar static-top">
+      <div class="container">
+        <a href="https://github.com/jonezime/bomber-bat">
+          <img class="navbar-image" src="assets/github.png" alt="Github" />
+        </a>
+        <span class="navbar-title">Welcome to BomberBat !</span>
+        <small class="subtitle"
+          >If music is not playing please try with Firefox web browser...</small
+        >
+      </div>
+    </nav>
+    <div id="game"></div>
+    <section class="testimonials text-center">
+      <div class="container">
+        <h3 class="mb-5">Introducing...</h3>
+        <div class="row">
+          <div class="col-lg-3">
+            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+              <img
+                class="img-fluid rounded-circle mb-3"
+                src="assets/player.png"
+                alt="The Bat"
+              />
+              <h5>The Bat</h5>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+              <img
+                class="img-fluid rounded-circle mb-3"
+                src="assets/bomb2.png"
+                alt="Bomber"
+              />
+              <h5>Bomber</h5>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+              <img
+                class="img-fluid rounded-circle mb-3"
+                src="assets/torch.png"
+                alt="Torcher"
+              />
+              <h5>Torcher</h5>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+              <img
+                class="img-fluid rounded-circle mb-3"
+                src="assets/wall-small.png"
+                alt="Wally"
+              />
+              <h5>Wally</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
+            <p class="text-muted small mb-4 mb-lg-0">
+              &copy; O&Zim 2020. Excepts where otherwise <b>noted</b>, content
+              on this site is licensed under a
+              <b>Creative Commons Attribution 3.0 License.</b>
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
+  <script></script>
 </html>
