fix torchs pattern

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         </a>
         <span class="navbar-title">Welcome to BomberBat !</span>
         <small class="subtitle"
-          >If music is not playing please try with Firefox web browser...</small
+          >If you're using' Chrome and there's no music, try with
+          Firefox...</small
         >
       </div>
     </nav>
@@ -83,9 +84,7 @@
         <div class="row">
           <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
             <p class="text-muted small mb-4 mb-lg-0">
-              &copy; O&Zim 2020. Excepts where otherwise <b>noted</b>, content
-              on this site is licensed under a
-              <b>Creative Commons Attribution 3.0 License.</b>
+              &copy; O&Zim 2020
             </p>
           </div>
         </div>
