--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
     />
     <link rel="stylesheet" href="style.css" type="text/css" />
     <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.22.0/phaser.js"></script>
@@ -25,10 +35,57 @@
           <img class="navbar-image" src="assets/github.png" alt="Github" />
         </a>
         <span class="navbar-title">Welcome to BomberBat !</span>
-        <small class="subtitle"
-          >If you're using' Chrome and there's no music, try with
-          Firefox...</small
+        <!-- Button trigger modal -->
+        <button
+          type="button"
+          class="btn btn-outline-success"
+          data-toggle="modal"
+          data-target="#modalRules"
         >
+          Rules
+        </button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="modalRules">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <div>
+                  <img
+                    class="img-fluid rounded-circle image-modal"
+                    src="assets/player.png"
+                    alt="The Bat"
+                  />
+                </div>
+                <div>
+                  <h4 class="modal-title" id="exampleModalLongTitle">
+                    BomberBat
+                  </h4>
+                </div>
+              </div>
+              <div class="modal-body">
+                <h5>
+                  Rules are simple : collect all Torchers, and keep you away
+                  from Wallies and Bombers !
+                </h5>
+                <br />
+                <h6>
+                  If you're using Chrome and there's no music, try with
+                  Firefox...
+                </h6>
+              </div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-outline-success"
+                  data-dismiss="modal"
+                >
+                  Close
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </nav>
     <div id="game"></div>
