--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
     <nav class="navbar static-top">
       <div class="container">
-        <a href="https://github.com/jonezime/bomber-bat">
+        <a target="_blank" href="https://github.com/jonezime/bomber-bat">
           <img class="navbar-image" src="assets/github.png" alt="Github" />
         </a>
         <span class="navbar-title">Welcome to BomberBat !</span>
