--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.22.0/phaser.js"></script>
     <script src="app.js"></script>
   </head>
-  <body>
+  <body id="window">
     <nav class="navbar static-top">
       <div class="container">
         <a target="_blank" href="https://github.com/jonezime/bomber-bat">
@@ -88,7 +88,7 @@
         </div>
       </div>
     </nav>
-    <div id="game"></div>
+    <div id="gameCss"></div>
     <section class="testimonials text-center">
       <div class="container">
         <h3 class="mb-5">Introducing...</h3>
@@ -148,5 +148,4 @@
       </div>
     </footer>
   </body>
-  <script></script>
 </html>
