modal show load

--- a/index.html
+++ b/index.html
@@ -157,5 +157,10 @@
         </div>
       </div>
     </footer>
+    <script type="text/javascript">
+      $(window).on("load", function () {
+        $("#modalRules").modal("show");
+      });
+    </script>
   </body>
 </html>
